--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="Home.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="able.html">MEMBERSHIP</a></li>
                 <li><a href="feedback.html.html">FEEDBACK</a></li>
 				<li><a href="volunteer.html">VOLUNTEER</a></li>
@@ -111,7 +111,7 @@
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="Home.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="able.html">MEMBERSHIP</a></li>
                 <li><a href="feedback.html.html">FEEDBACK</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
@@ -140,4 +140,5 @@
     </div>
 </footer>
 </body>
+
 </html>          
