--- a/k.html
+++ b/k.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="4;url=home.html"> <!-- Redirect to home page after 4 seconds -->
+    <meta http-equiv="refresh" content="4;url=index.html"> <!-- Redirect to home page after 4 seconds -->
     <title>SDG Splash Screen</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,7 +29,7 @@
 <body>
     <header>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="volunteer.html">Volunteer</a>
             <a href="content_ST1.html">Content</a>
         </nav>
@@ -81,4 +81,5 @@
     <h2>Validation Results</h2>
     <p>Validation screenshots and explanations will be placed here.</p>
 </body>
+
 </html>
