--- a/loki.html
+++ b/loki.html
@@ -24,7 +24,7 @@
                 <li><a href="feedback.html.html">FEEDBACK</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="loki.html">ABOUT US</a></li>
-                <li><a href="#">SITE MAP</a></li>
+                <li><a href="Sitemap.html">SITE MAP</a></li>
             </ul>
         </nav>
     </header>
@@ -125,10 +125,10 @@
 		        <div class="footer-section">
             <h3>Page Editors</h3>
             <ul>
-                <li><a href="#">Student 1</a></li>
-                <li><a href="#">Student 2</a></li>
-                <li><a href="#">Student 3</a></li>
-                <li><a href="#">Student 4</a></li>
+                <li><a href="pageEditor_ST1.html>Student 1</a></li>
+                <li><a href="PageEditor_ST2.html">Student 2</a></li>
+                <li><a href="pageEditor_ST3.html.html">Student 3</a></li>
+                <li><a href="pageediter.html">Student 4</a></li>
             </ul>
         </div>
     </div>
@@ -137,3 +137,4 @@
 </html>
 
   
+
