--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <h3>Follow Us</h3>
             <ul class="social-icons">
                 <li><a href="https://www.facebook.com/profile.php?id=100074258534518" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="https://x.com/alwaysPasindu" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.instagram.com/husni_atham01/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="https://github.com/Husni-01" target="_blank"><i class="fab fa-github"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/husni-atham-22b80432a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BSljn%2BDHPTFOr13rGdimLgA%3D%3D" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             </ul>
@@ -142,3 +142,4 @@
 </body>
 
 </html>          
+
