--- a/Content_ST2.html
+++ b/Content_ST2.html
@@ -24,7 +24,7 @@
                 <li><a href="feedback.html.html">FEEDBACK</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
-                <li><a href="#">SITE MAP</a></li>
+                <li><a href="Sitemap.html">SITE MAP</a></li>
             </ul>
         </nav>
     </header>
@@ -131,14 +131,14 @@
                 <li><a href="feedback.html.html">FEEDBACK</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
-                <li><a href="#">SITE MAP</a></li>
+                <li><a href="Sitemap.html">SITE MAP</a></li>
             </ul>
         </div>
         <div class="footer-section">
             <h3>Follow Us</h3>
             <ul class="social-icons">
                 <li><a href="https://www.facebook.com/profile.php?id=100074258534518" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="https://x.com/alwaysPasindu" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.instagram.com/husni_atham01/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="https://github.com/Husni-01" target="_blank"><i class="fab fa-github"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/husni-atham-22b80432a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BSljn%2BDHPTFOr13rGdimLgA%3D%3D" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             </ul>
@@ -157,3 +157,4 @@
     
 </body>
 </html>
+
