--- a/Content_ST2.html
+++ b/Content_ST2.html
@@ -19,8 +19,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
                 <li><a href="feedback.html.html">FEEDBACK</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
@@ -127,7 +127,7 @@
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="Home.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
                 <li><a href="feedback.html.html">FEEDBACK</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
                 <li><a href="Team.html">ABOUT US</a></li>
@@ -157,4 +157,5 @@
     
 </body>
 </html>
+
 
