--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="able.html">MEMBERSHIP</a></li>
+                <li><a href="Table.html">MEMBERSHIP</a></li>
                 <li><a href="feedback.html.html">FEEDBACK</a></li>
 				<li><a href="volunteer.html">VOLUNTEER</a></li>
                 <li><a href="Profile.html">USER PROFILE</a></li>
@@ -142,4 +142,5 @@
 </body>
 
 </html>          
+
 
