--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@ my code
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-    <!-- Full-Screen Video Background -->
-    <video autoplay muted loop id="myVideo">
-        <source src="Shark.mp4" type="video/mp4">
-        Your browser does not support HTML5 video.
-    </video>
+<video 
+  autoplay 
+  muted 
+  loop 
+  playsinline 
+  preload="auto"
+  id="bg-video"
+>
+  <source src="Shark.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
     <!-- Navbar -->
     <header>
@@ -143,5 +149,6 @@ my code
 </body>
 
 </html>          
+
 
 
