--- a/index.html
+++ b/index.html
@@ -9,17 +9,10 @@ my code
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-<video 
-  autoplay 
-  muted 
-  loop 
-  playsinline 
-  preload="auto"
-  id="bg-video"
->
-  <source src="Shark.mp4" type="video/mp4">
-  Your browser does not support the video tag.
+<video id="myVideo" autoplay muted loop playsinline>
+  <source src="https://github.com/user-attachments/assets/8220bf0a-9ab7-4732-85ee-393ea4937f9c" type="video/mp4">
 </video>
+
 
     <!-- Navbar -->
     <header>
@@ -149,6 +142,7 @@ my code
 </body>
 
 </html>          
+
 
 
 
