--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@ my code
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-<video id="myVideo" autoplay muted loop playsinline>
-  <source src="https://github.com/user-attachments/assets/8220bf0a-9ab7-4732-85ee-393ea4937f9c" type="video/mp4">
-</video>
-
 
     <!-- Navbar -->
     <header>
@@ -31,18 +27,17 @@ my code
             </ul>
         </nav>
     </header>
-	<section class="webmission">  
-        <div class="mission">
-            <img src="fish.png" alt="mission picture" class="missionimg"><br>
-            <div class="missionheading">
-				<p>  LIFE BELOW<br> WATER</p>
-			<div class="content">
-				<p>Conserve and sustainably use the oceans, seas and marine resources for sustainable development</p>
-				</div>
-			</div>   
-        </div>
+    <section class="hero">
+        <video autoplay muted loop playsinline>
+            <source src="Shark.mp4" type="video/mp4">
+        </video>
 
-        <div class="missioncontent">
+        <div class="hero-content">
+            <h1>LIFE BELOW<br>WATER</h1>
+            <p>
+                Conserve and sustainably use the oceans, seas and marine resources
+                for sustainable development
+            </p>
         </div>
     </section>
 	
@@ -142,6 +137,7 @@ my code
 </body>
 
 </html>          
+
 
 
 
