--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ my code
     </header>
     <section class="hero">
         <video autoplay muted loop playsinline>
-            <source src="Shark.mp4" type="video/mp4">
+				<source src="videos/Shark.mp4" type="video/mp4">
         </video>
 
         <div class="hero-content">
@@ -137,6 +137,7 @@ my code
 </body>
 
 </html>          
+
 
 
 
