Update: Refined content in HTML files

--- a/Content_ST2.html
+++ b/Content_ST2.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=., initial-scale=1.0">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="Content_ST2.css">
+    <link rel="icon" type="image/png" href="AAA.png">
     <title>Content page Student 1</title>
 </head>
 <body>
