--- a/Table.html
+++ b/Table.html
@@ -6,6 +6,8 @@
     <title>Membership Benefits Table</title>
 	<link rel="stylesheet" href="able.css">  
     	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+        <link rel="icon" type="image/png" href="AAA.png">
+
 </head>
 <body>
     <!-- Full-Screen Video Background -->
