--- a/content_ST3.html
+++ b/content_ST3.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keeping Beaches Clean</title>
     <link rel="stylesheet" href="ContentPageStudent3.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="icon" type="image/png" href="AAA.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
     <video class="video-background" autoplay muted loop>
         <source src="videos/Background-video.mp4" type="video/mp4">
+	<source src="videos/Background-video.webm" type="video/webm">
 	<source src="https://res.cloudinary.com/drw8ltqaz/video/upload/v1766988437/Background-video_1_ukjari.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
