--- a/feedback.html
+++ b/feedback.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Feedback</title>
-
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="form.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="icon" type="image/png" href="AAA.png">
 </head>
 <body>
 
@@ -138,7 +138,6 @@
     <div class="footer-overlay"></div>
     <video autoplay loop muted>
         <source src="videos/Shark.mp4" type="video/mp4">
-
         Your browser does not support the video tag.
     </video>
 <div class="footer-content">
