--- a/pageediter.html
+++ b/pageediter.html
@@ -6,6 +6,8 @@
     <title>Page Editor Student - Dhanula Rajakaruna</title>
     <link rel="stylesheet" href="css/pageEditor_validator.css"> <!-- External CSS link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="icon" type="image/png" href="H.jpg">
+
     <style>
         /* Existing CSS styles */
         body {
