--- a/PageEditor_ST2.html
+++ b/PageEditor_ST2.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Editor Student - Raneth Kavendra Mendis</title>
     <link rel="stylesheet" href="pageEditor_ST2.css"> <!-- External CSS link -->
+    <link rel="icon" type="image/png" href="AAA.png">
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	
 
