--- a/content_student1.html
+++ b/content_student1.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=., initial-scale=1.0">
     <link rel="stylesheet" href="content_student1.css">
+    <link rel="icon" type="image/png" href="AAA.png">
+
     <title>Content page Student 1</title>
 </head>
 <body>
