--- a/pageEditor_ST1.html
+++ b/pageEditor_ST1.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Editor Student - Raneth Kavendra Mendis</title>
     <link rel="stylesheet" href="pageEditor_validator.css"> <!-- External CSS link -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="icon" type="image/png" href="AAA.png">
+
 	
 
 </head>
